--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,14 @@ body{
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+    .card {
+        background-color: theme('backgroundColor.secondary-dark-bg');
+        border-radius: theme('borderRadius.lg');
+        padding: theme('spacing.6');
+        box-shadow: theme('boxShadow.xl');
+    }
+    /* ... */
+}
