--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
-.logo-font{
+@font-face {
+  font-family: myfont;
+  src: url('./test/BRUSHSCI.TTF');
+}
+@font-face {
+  font-family: myfont1;
+  src: url('./test/SNAP.TTF');
+}
+
+.logo-font {
   font-family: 'Press Start 2P', cursive;
   /* color: rgb(158, 231, 231); */
   background: -webkit-linear-gradient(rgb(0, 158, 161), rgb(60, 143, 245));
@@ -6,11 +15,16 @@
   -webkit-text-fill-color: transparent;
   /* background-image: linear-gradient(rgb(158, 231, 231), rgb(116, 171, 239)); */
 }
-.chart-w-h{
-  width:700px;
-  height:500px;
+.chart-w-h {
+  width: 700px;
+  height: 500px;
 }
 
-.basis-1-2{
+.basis-1-2 {
   flex-basis: 48% !important;
+}
+.colorChange {
+  color: brown;
+  font-family: myfont;
+  font-weight: 600;
 }
